package fr.mifa.core.network.protocol;

import java.io.Serializable;

/**
 * Mother class of every message of MIFA's protocol
 */
public abstract class Packet implements Serializable {

}
